# proto3-suite

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  Wrappers.hs  cabal.project  default-dhall.nix  default-tests.nix  default.nix  nixpkgs.json  proto3-suite.cabal  protobuf-wire.cabal  release.nix  script.ghci  shell.nix  stack.lts-11.10.yaml  stack.yaml  t.proto  wrappers.proto
.circleci/: config.yml
.github/workflows/: ci.yml
base/: proto3-base.cabal  shell.nix  stack.yaml
base/src/Proto3/Suite/: Class.hs  JSONPB.hs
base/src/Proto3/Suite/JSONPB/: Class.hs
base/test-files/: make_reference_encodings.py  test_proto_leading_dot.proto  test_proto_nested_message.proto  test_proto_protoc_plugin.proto
base/test-files/google/protobuf/: wrappers.proto
base/tests/: Main.hs  SimpleDecodeDotProto.hs  SimpleEncodeDotProto.hs  TestCodeGen.hs
compile/: proto3-compile.cabal  shell.nix
compile/src/Proto3/Suite/DotProto/: AST.hs  Generate.hs  Internal.hs  Parsing.hs  Rendering.hs
compile/tests/: Main.hs
compile/tests/Test/Proto/Generate/: Name.hs
compile/tests/Test/Proto/Generate/Name/: Gen.hs
compile/tools/canonicalize-proto-file/: Main.hs
compile/tools/compile-proto-file/: Main.hs
dhall/: proto3-dhall.cabal  shell.nix
dhall/tests/: ArbitraryGeneratedTestTypes.hs  Main.hs
include/protoc_plugin/: elixirpb.proto
nix/: HTTP.nix  QuickCheck-2.9.nix  aeson-pretty.nix  cabal-install.nix  cabal-install.patch  cborg-json.nix  dec.nix  dhall.nix  ed25519.nix  fetchNixpkgs.nix  formatting.nix  generic-random.nix  generics-sop.nix  hackage-security.nix  haskell-packages.nix  haskell-src.nix  http-media.nix  insert-ordered-containers.nix  inspection-testing.nix  integer-logarithms.nix  lukko.nix  megaparsec.nix  neat-interpolation.nix  network-bsd.nix  nixpkgs.nix  optics-core.nix  optics-extra.nix  optics-th.nix  parameterized.nix  pkgs.nix  prettyprinter.nix  proto3-suite-dhall.nix  proto3-suite.nix  proto3-wire.nix  quickcheck-unicode.nix  range-set-list.nix  refact.nix  resolv.nix  singleton-bool.nix  sop-core.nix  (+3 more)
nix/haskell-packages/: tasty-ant-xml.nix  tasty.nix
nix/overlays/: haskell-packages.nix  haskell.nix
nix/patches/: aeson-2.1.2.1.patch
nixpkgs/: 17_09.nix
proto3-suite/: proto3-suite.cabal
proto3-suite-ast/: proto3-suite-ast.cabal  shell.nix
proto3-suite-ast/src/Proto3/Suite/DotProto/: AST.hs
proto3-suite-ast/src/Proto3/Suite/DotProto/AST/: Core.hs  Enumerate.hs  Field.hs  Lens.hs  Message.hs  Option.hs  Type.hs
proto3-suite-compile/: proto3-suite-compile.cabal
proto3-suite-compile/src/Proto3/Suite/DotProto/: Generate.hs
proto3-suite-compile/tests/: ArbitraryGeneratedTestTypes.hs  Main.hs  SimpleEncodeDotProto.hs  send_simple_dot_proto.py
proto3-suite-compile/tools/canonicalize-proto-file/: Main.hs
proto3-suite-compile/tools/compile-proto-file/: Main.hs
proto3-suite/src/Google/Protobuf/: Timestamp.hs
proto3-suite/src/Proto3/Suite/: DhallPB.hs  JSONPB.hs  Types.hs
proto3-suite/src/Proto3/Suite/DotProto/: AST.hs  Rendering.hs
proto3-suite/src/Proto3/Suite/JSONPB/: Class.hs  Swagger.hs
proto3-suite/tests/: Main.hs  SimpleDecodeDotProto.hs  TestCodeGen.hs
protoToHsGenTest/: Unwrap.hs
src/Data/Protobuf/: Wire.hs
src/Data/Protobuf/Wire/: Class.hs  Decode.hs  DotProto.hs  Encode.hs  Example.hs  Generic.hs  Shared.hs  Tutorial.hs  Types.hs
src/Data/Protobuf/Wire/Decode/: Internal.hs  Parser.hs
src/Data/Protobuf/Wire/DotProto/: AST.hs  Generate.hs  Parsing.hs  Rendering.hs
src/Data/Protobuf/Wire/Encode/: Internal.hs
src/Data/Protobuf/Wire/Generic/: DotProto.hs
src/Google/Protobuf/: Timestamp.hs
src/Google/Protobuf/Wrappers/: Polymorphic.hs
src/Proto3/: Suite.hs
src/Proto3/Suite/: Class.hs  DhallPB.hs  DotProto.hs  Form.hs  JSONPB.hs  Tutorial.hs  Types.hs
src/Proto3/Suite/DotProto/: AST.hs  Generate.hs  Internal.hs  JSONPB.hs  Parsing.hs  Rendering.hs  TH.hs
src/Proto3/Suite/DotProto/AST/: Enumerate.hs  Field.hs  Identifier.hs  Lens.hs  Message.hs  Option.hs  Type.hs  Value.hs
src/Proto3/Suite/DotProto/Generate/: Common.hs  JSON.hs  JSON.proto  JSONPBProto.hs  JSONScratch.hs  LargeRecord.hs  Purescript.hs  Record.hs  Swagger.hs  Swagger.hs-boot  (+1 more)
src/Proto3/Suite/Form/: Encode.hs
src/Proto3/Suite/Haskell/: Parser.hs  Syntax.hs
src/Proto3/Suite/JSONPB/: Class.hs  Instances.hs  Purescript.hs
src/Test/Proto/: Compiled.hs  Quote.hs
src/Turtle/: Compat.hs
swagger/: proto3-swagger.cabal  shell.nix
swagger/test-files/: test_proto.proto  test_proto_oneof_import.proto
swagger/tests/: Main.hs  TestCodeGen.hs
test-files/: JSONPBTestTypes.proto  JSONPBTestTypesImport.proto  Orphan.hs  extra_instances_deriving.hs  make_reference_encodings.py  simple.proto  test.proto  test_import.proto  test_proto.proto  test_proto_empty_field.proto  test_proto_extend.proto  test_proto_leading_dot.proto  test_proto_negative_enum.proto  test_proto_nested_message.proto  test_proto_oneof.proto  test_proto_optional.proto  test_proto_wrappers.proto  unwrap.proto
test-files/google/protobuf/: descriptor.proto
test-files/leading_dot/: data.proto
test-files/protoc_plugin/: descriptor.proto  google_protobuf.proto
tests/: ArbitraryGeneratedTestTypes.hs  GeneratedImportedTestTypes.hs  GeneratedTestTypes.hs  JSONPBTestTypes.hs  JSONPBTestTypesImport.hs  Main.hs  OldTestTypes.hs  README.md  SimpleDecodeDotProto.hs  SimpleEncodeDotProto.hs  TestCodeGen.hs  TestDhall.hs  TestJSONPBManualCG.hs  TestProto.hs  TestProtoImport.hs  TestProtoOneof.hs  TestProtoOneofImport.hs  TestTypes.hs  check_simple_dot_proto.py  decode.sh  encode.sh  generate-test-types.sh  no-stack.patch  send_simple_dot_proto.py  tests.patch
tests/Test/Dhall/: Orphan.hs
tests/Test/Proto/: Compiled.hs  Files.hs  Internal.hs  Interval.hs  Parse.hs  Quote.hs  TH.hs  ToEncoder.hs  ToEncoding.hs
tests/Test/Proto/Generate/: CodeGen.hs  Name.hs
tests/Test/Proto/Parse/: Core.hs  Extend.hs  Gen.hs  Option.hs
tools/canonical-proto-file/: Main.hs
tools/canonicalize-proto-file/: Main.hs
tools/compile-proto-file/: Main.hs
(+11 files in other folders)
