name:                protobuf-wire
version:             0.1.0.0
synopsis:            A low level library for writing out data in the Protocol Buffers wire format
license:             AllRightsReserved
author:              Phil Freeman
maintainer:          phil@awakenetworks.com
copyright:           2016 Awake Networks
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Protobuf.Wire
                       Data.Protobuf.Wire.Example
                       Data.Protobuf.Wire.Generic
  build-depends:       base >=4.8 && <4.9,
                       text >= 0.2 && <1.3,
                       bytestring >=0.10.6.0 && <0.11.0
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.8 && <4.9,
                       tasty >= 0.11 && <0.12,
                       tasty-hunit >= 0.9 && <0.10,
                       tasty-quickcheck >= 0.8.4 && <0.9,
                       bytestring >=0.10.6.0 && <0.11.0,
                       text >= 0.2 && <1.3,
                       protobuf-wire
