name:                protobuf-wire
version:             0.1.0.0
synopsis:            A low level library for writing out data in the Protocol Buffers wire format
license:             AllRightsReserved
author:              Phil Freeman
maintainer:          phil@awakenetworks.com
copyright:           2016 Awake Networks
category:            Codec
build-type:          Simple
cabal-version:       >=1.10
data-files:          test-files/*.bin

library
  exposed-modules:     Data.Protobuf.Wire.Decode
                       Data.Protobuf.Wire.Decode.Internal
                       Data.Protobuf.Wire.Decode.Parser
                       Data.Protobuf.Wire.Encode
                       Data.Protobuf.Wire.Encode.Internal
                       Data.Protobuf.Wire.Shared
                       Data.Protobuf.Wire.Example
                       Data.Protobuf.Wire.Generic
                       Data.Protobuf.Wire.Generic.DotProto
  build-depends:       base >=4.8 && <4.9,
                       bytestring >=0.10.6.0 && <0.11.0,
                       deepseq ==1.4.*,
                       pretty ==1.1.*,
                       text >= 0.2 && <1.3,
                       cereal >= 0.5.1 && <0.6,
                       monad-loops ==0.4.*,
                       mtl ==2.2.*,
                       containers ==0.5.*

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       TestTypes
  hs-source-dirs:      tests
  build-depends:       base >=4.8 && <4.9,
                       tasty >= 0.11 && <0.12,
                       tasty-hunit >= 0.9 && <0.10,
                       tasty-quickcheck >= 0.8.4 && <0.9,
                       bytestring >=0.10.6.0 && <0.11.0,
                       text >= 0.2 && <1.3,
                       protobuf-wire,
                       QuickCheck >=2.8 && <2.9,
                       cereal >= 0.5.1 && <0.6
