name:                protobuf-wire
version:             0.1.0.0
synopsis:            A low level library for writing out data in the Protocol Buffers wire format
license:             AllRightsReserved
author:              Phil Freeman
maintainer:          phil@awakenetworks.com
copyright:           2016 Awake Networks
category:            Codec
build-type:          Simple
cabal-version:       >=1.10
data-files:          test-files/*.bin tests/encode.sh tests/decode.sh

library
  exposed-modules:     Data.Protobuf.Wire
                       Data.Protobuf.Wire.Class
                       Data.Protobuf.Wire.DotProto
                       Data.Protobuf.Wire.DotProto.Generate
                       Data.Protobuf.Wire.DotProto.AST
                       Data.Protobuf.Wire.DotProto.Parsing
                       Data.Protobuf.Wire.DotProto.Rendering
                       Data.Protobuf.Wire.Tutorial
                       Data.Protobuf.Wire.Types
  build-depends:       base >=4.8 && <4.10,
                       bytestring >=0.10.6.0 && <0.11.0,
                       deepseq ==1.4.*,
                       cereal >= 0.5.1 && <0.6,
                       containers ==0.5.*,
                       filepath >=1.4 && <1.5,
                       haskell-src ==1.0.*,
                       mtl ==2.2.*,
                       parsec >= 3.1.9 && <3.2.0,
                       parsers >= 0.12 && <0.13,
                       pipes ==4.1.*,
                       pretty ==1.1.*,
                       proto3-wire == 1.0.*,
                       QuickCheck >=2.8 && <2.9,
                       semigroups ==0.18.*,
                       safe ==0.3.*,
                       text >= 0.2 && <1.3,
                       transformers >=0.4 && <0.5,
                       vector ==0.11.*

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       TestTypes TestCodeGen
  hs-source-dirs:      tests
  build-depends:       base >=4.8 && <4.9,
                       tasty >= 0.11 && <0.12,
                       tasty-hunit >= 0.9 && <0.10,
                       tasty-quickcheck >= 0.8.4 && <0.9,
                       bytestring >=0.10.6.0 && <0.11.0,
                       text >= 0.2 && <1.3,
                       proto3-wire == 1.0.*,
                       protobuf-wire,
                       QuickCheck >=2.8 && <2.9,
                       cereal >= 0.5.1 && <0.6,
                       semigroups ==0.18.*,
                       transformers >=0.4 && <0.5,
                       turtle >= 1.2.0
