cabal-version:       2.0
name:                proto3-compile
version:             0.6.0
synopsis:            A higher-level API to the proto3-wire library
description:
  This executable compiles .proto files to Haskell code that uses
  <https://github.com/awakesecurity/proto3-wire the `proto3-wire` library>
  and defines type classes for encoding and decoding messages.
  .
  See <https://hackage.haskell.org/package/proto3-suite/docs/Proto3-Suite-Tutorial.html the `Proto3.Suite.Tutorial` module>
  for more details.
  .
license:             Apache-2.0
author:              Arista Networks <opensource@awakesecurity.com>
maintainer:          Arista Networks <opensource@awakesecurity.com>
copyright:           2017-2020 Awake Security, 2021-2022 Arista Networks
category:            Codec
build-type:          Simple

library

  exposed-modules:     Proto3.Suite.DotProto
                       Proto3.Suite.DotProto.Generate
                       Proto3.Suite.DotProto.AST
                       Proto3.Suite.DotProto.AST.Lens
                       Proto3.Suite.DotProto.Parsing
                       Proto3.Suite.DotProto.Rendering

  other-modules:       Proto3.Suite.DotProto.Internal

  build-depends:       base >=4.9 && <5.0,
                       containers >=0.5 && < 0.7,
                       filepath,
                       foldl,
                       haskell-src ==1.0.*,
                       lens,
                       mtl ==2.2.*,
                       neat-interpolation,
                       parsec >= 3.1.9 && <3.2.0,
                       parsers >= 0.12 && <0.13,
                       pretty ==1.1.*,
                       pretty-show >= 1.6.12 && < 2.0,
                       proto3-wire >= 1.2.2 && < 1.3,
                       QuickCheck >=2.10 && <2.15,
                       quickcheck-instances < 0.4,
                       system-filepath,
                       text >= 0.2 && <1.3,
                       turtle
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

executable compile-proto-file
  main-is:             Main.hs
  hs-source-dirs:      tools/compile-proto-file
  default-language:    Haskell2010
  build-depends:       base >=4.12 && <5.0
                       , optparse-applicative
                       , proto3-compile
  ghc-options:         -O2 -Wall

executable canonicalize-proto-file
  main-is:             Main.hs
  hs-source-dirs:      tools/canonicalize-proto-file
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <5.0
                       , mtl ==2.2.*
                       , optparse-generic
                       , proto3-compile
                       , proto3-wire == 1.2.*
                       , range-set-list >=0.1.2 && <0.2
                       , turtle
  ghc-options:         -O2 -Wall

test-suite tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Main.hs

  hs-source-dirs:
    tests

  other-modules:
    Test.Proto.Generate.Name
    Test.Proto.Generate.Name.Gen

  build-depends:
      base >=4.9 && <5.0
    , doctest
    , hedgehog
    , mtl ==2.2.*
    , pretty-show >= 1.6.12 && < 2.0
    , proto3-compile == 0.6.*
    , proto3-wire == 1.2.*
    , QuickCheck >=2.10 && <2.15
    , tasty >= 0.11 && <1.5
    , tasty-hedgehog
    , tasty-hunit >= 0.9 && <0.11
    , tasty-quickcheck >= 0.8.4 && <0.11
    , text >= 0.2 && <1.3
    , transformers >=0.4 && <0.6
    , turtle
    , vector >=0.11 && < 0.13

  ghc-options:         -O2 -Wall

